core-bundle/contao/themes/flexible/styles/layout/filter.pcss
.tl_panel {
    &:not(:last-of-type) {
        padding-bottom: 15px;
        margin-bottom: 15px;
        border-bottom: 1px solid var(--content-border);
    }
}

.tl_subpanel {
    letter-spacing: -.31em;

    &:not(:last-child) {
        padding-bottom: 15px;
        margin-bottom: 15px;
        border-bottom: 1px solid var(--content-border);
    }

    * {
        letter-spacing: normal;
    }

    > * {
        margin: 0;
    }

    > *:not(label, button, :last-child) {
        margin-bottom: 10px;
    }

    > strong,
    > label:first-child { /* If there is no strong, style the label */
        display: block;
        padding: 3px 0;
        margin-bottom: 10px;
        font-weight: 600;
    }

    label {
        display: inline-block;
        margin-bottom: 4px;
    }

    :is(select, input, button) {
        height: 30px;
    }
}

.tl_filter {
    box-sizing: border-box;
}

.tl_search {
    gap: 0;
}

.tl_select_wrapper {
    margin: 3px 0;

    > * {
        margin: 0;
    }
}

.tl_img_submit {
    display: block;
    width: 100%;
    white-space: nowrap;
    background-color: var(--form-bg);
    background-position: 6px 6px;
    background-repeat: no-repeat;
    margin: 0;
    border: 1px solid var(--form-border);
    border-radius: var(--border-radius);
    box-sizing: border-box;
    transition: background .2s ease;
    padding-left: 20px;

    &:hover {
        background-color: var(--form-bg-hover);
    }
}

.filter_apply {
    background-image: var(--icon-filter);
}

.filter_reset {
    background-image: var(--icon-filter--active);
}

.filter_reset[disabled] {
    opacity: .6;
    cursor: not-allowed;
}

[data-contao--filter-target="count"] {
    font-size: .6rem;
    color: var(--text);
    background: var(--nav-current);
    border-radius: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 16px;
    width: 16px;

    &:empty {
        display: none;
    }
}

.tl_panel .active, .tl_panel_bottom .active, #search .active {
    background-color: var(--active-bg);
}

.content-filter {
    display: grid;
    grid-template-rows: 1fr auto;
    order: 1;
    border-bottom: 1px solid var(--content-border);

    .tl_formbody {
        padding: 12px 15px 15px;
    }

    > .close {
        display: none;
    }
}

.tl_submit_panel {
    position: sticky;
    bottom: 0;
    background: var(--panel-bg);
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    padding: 15px;
    border-radius: 0 0 var(--border-radius) var(--border-radius);

    &.is-sticky {
        border-radius: 0;
    }
}

@media (width < 992px) {
    .content-filter {
        position: absolute;
        inset: 0 0 auto auto;
        z-index: 2;
        bottom: 0;
        background: var(--content-bg);
        width: max(280px, 65vw);
        transform: translateX(280px);
        visibility: hidden;
        transition: transform .2s ease, visibility .2s ease;
        will-change: transform, visibility;

        > .close {
            position: absolute;
            inset: 12px 12px auto auto;
            display: flex;
            justify-content: center;
            padding: 0;
            width: 24px;
            height: 24px;
            border: 0 none;
            background: transparent;
            font-size: 30px;
            line-height: 19px;
        }
    }

    li:has(>.header_filter_toggle) {
        display: initial !important;
    }

    .content.filter-active {
        .content-filter {
            visibility: visible;
            transform: translateX(0);
        }

        &::after {
            content: '';
            display: block;
            position: absolute;
            inset: 0;
            background: rgba(0, 0, 0, .7);
        }
    }

    .tl_submit_panel {
        border-radius: 0;
    }
}

@media (min-width: 992px) {
    #main {
        .content-filter {
            border-left: 1px solid var(--content-border);
            position: sticky;
            top: 15px;
        }
    }
}

@media (min-width: 1280px) {
    :root {
        --filter-width: 300px;
        --main-panel-gap: 15px;
    }

    .tl_submit_panel {
        flex-wrap: nowrap;
    }
}

